# HRT-Macro-Placement-

./: MACRO_PICK_SHOOTOUT_NOTES.md  NOTES.md  README.md  RECORD.md  all.txt  explore_surrogate_vs_proxy.csv  gpu_proxycheck.csv  ibm01_2000_nol_cong_sur_px_abs_delta.csv  last_results.txt  liquid.txt  logs.txt  logs_ibm04.txt  place_explore_proxy.csv  pyproject.toml  requirements.txt  results.txt  timed_place_explore_proxy.csv
macro_place/: __init__.py  _plc.py  benchmark.py  evaluate.py  fast_proxy.py  loader.py  objective.py  routing_surrogate.py
scripts/: evaluate_gradient_random_start.py  evaluate_placer.py  fixed_gradient_weight_sweep.py  plot_surrogate_proxy_cong_gap.py  plot_training_log_proxy.py  profile_gpu_placer.py  relax_before_after.py  sa_before_after.py  snap_spread_before_after.py
submissions/: __init__.py  abbacus.py  chosen.py  cluster.py  cluster_sa.py  electro.py  evolution.py  explore.py  explore_gpu.py  explore_multiple.py  free.py  genetic.py  gradient.py  gradient2.py  gradient3.py  grid_side_uniform_experiment.py  legal.py  liquid.py  macro_pick_experiment.py  neste.py  place_explore.py  qp.py  relax.py  sa.py  simple.py  simple_gpu.py  snap.py  snap_spread.py  timed_place_explore.py
submissions/gpu/: __init__.py  pairwise_overlap.py  placer.py
test/: test_smoke.py
