[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-place"
version = "0.1.0"
description = "Macro Placement Challenge - Beat Kahng's benchmarks for $20K"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
    {name = "Partcl"},
]
maintainers = [
    {name = "Partcl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

# Torch from cu126 (CUDA 12.6 wheels include Pascal); cu128 default builds do not.
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "absl-py>=1.0.0",
    "cvxpy>=1.4.0",
    "osqp>=0.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0; python_version >= '3.8.1'",
]
baselines = [
    "torch-geometric>=2.3.0",
    "scipy>=1.10.0",
]

[project.scripts]
evaluate = "macro_place.evaluate:main"

[project.urls]
Homepage = "https://github.com/partcl/partcl-marco-place-challenge"
Repository = "https://github.com/partcl/partcl-marco-place-challenge"
Issues = "https://github.com/partcl/partcl-marco-place-challenge/issues"

[tool.setuptools.packages.find]
include = ["macro_place*"]

[tool.setuptools.package-data]
macro_place = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
